--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,8 +79,7 @@ jobs:
             libasio-dev
             libecasoundc-dev
             libfftw3-dev
-            # libfmt >= 5 is needed, which is in Ubuntu disco
-            #libfmt-dev
+            libfmt-dev
             libjack-dev
             libjack0
             libmysofa-dev
