--- a/.github/workflows/pd-externals.yml
+++ b/.github/workflows/pd-externals.yml
@@ -144,6 +144,9 @@ jobs:
     steps:
       - name: Clone Git repository
         uses: actions/checkout@v2
+        with:
+          # check out all tags to get proper version in Deken package
+          fetch-depth: 0
       - name: Retrieve Linux externals
         uses: actions/download-artifact@v2
         with:
