Use std::filesystem, posixpathtools -> pathtools

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@
 ## comments starting with a single # are copied to Makefile.in (and afterwards
 ## to Makefile), comments with ## are dropped.
 
-SUBDIRS = src man data browser-gui
+SUBDIRS = src man data browser-gui tests
 
 ## only entered for "make dist", "make distclean" and "make maintainer-clean":
 ##DIST_SUBDIRS = $(SUBDIRS) another_dir
