--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,28 +52,6 @@ jobs:
             $PIP_INSTALL -r doc/manual/requirements.txt
 
       - run:
-          name: Building HTML Manual
-          command: |
-            cd doc/manual
-            make html
-
-      - store_artifacts:
-          name: Uploading HTML Manual
-          path: doc/manual/_build/html
-          destination: manual
-
-      - run:
-          name: Building PDF Manual
-          command: |
-            cd doc/manual
-            make latexpdf
-
-      - store_artifacts:
-          name: Uploading PDF Manual
-          path: doc/manual/_build/latex/SoundScapeRenderer.pdf
-          destination: SoundScapeRenderer.pdf
-
-      - run:
           name: Configuring SSR
           command: |
             ./autogen.sh
@@ -112,10 +90,37 @@ jobs:
           destination: doxygen
 
       - run:
+          name: Building HTML Manual
+          command: |
+            cd doc/manual
+            make html -W --keep-going
+
+      - store_artifacts:
+          name: Uploading HTML Manual
+          path: doc/manual/_build/html
+          destination: manual
+
+      - run:
+          name: Building PDF Manual
+          command: |
+            cd doc/manual
+            make latexpdf
+
+      - store_artifacts:
+          name: Uploading PDF Manual
+          path: doc/manual/_build/latex/SoundScapeRenderer.pdf
+          destination: SoundScapeRenderer.pdf
+
+      - run:
           name: Check for broken links in User Manual
           command: |
             cd doc/manual
-            make linkcheck
+            make linkcheck -W --keep-going
+
+      - store_artifacts:
+          name: Uploading linkcheck results
+          path: doc/manual/_build/linkcheck
+          destination: linkcheck
 
 workflows:
   version: 2
