Rework GitHub workflows for MacOS and Clang
(split `macos-latest` into specific versions and compile either of them with the two latest supported xcode versions)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,19 +47,22 @@ jobs:
               CC: clang-9
               CXX: clang++-9
               CXXFLAGS: -fno-builtin
-          - os: macos-latest
-            xcode: Xcode_14
+          - os: macos-12
+            xcode: Xcode_14.0.1
             env: {}
-          - os: macos-latest
+          - os: macos-12
+            xcode: Xcode_13.4.1
+            env: {}
+          - os: macos-11
             xcode: Xcode_13.2.1
             env: {}
-          - os: macos-latest
-            xcode: Xcode_13.1
-            env: {}
-          - os: macos-latest
+          - os: macos-11
             xcode: Xcode_12.5.1
             env: {}
-          - os: macos-latest
+          - os: macos-10.15
+            xcode: Xcode_12.4
+            env: {}
+          - os: macos-10.15
             xcode: Xcode_11.7
             env: {}
     runs-on: ${{ matrix.os }}
