--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+          path: 'test path with spaces'
       - name: Select Xcode
         if: matrix.xcode
         run: |
