Update Githhub main workflow to force space into directory path
(second try)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,9 @@ jobs:
         with:
           submodules: true
           path: 'test path with spaces'
+      - name: Change into nasty path
+        run: |
+          cd 'test path with spaces'
       - name: Select Xcode
         if: matrix.xcode
         run: |
