Update Githhub main workflow to force space into directory path
(third try)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,10 @@ jobs:
           path: 'test path with spaces'
       - name: Change into nasty path
         run: |
+          pwd
           cd 'test path with spaces'
+          pwd
+          ls
       - name: Select Xcode
         if: matrix.xcode
         run: |
