--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ jobs:
     strategy:
       matrix:
         include:
+          - os: ubuntu-22.04
+            compiler-pkg: g++-12
+            env:
+              CC: gcc-12
+              CXX: g++-12
           - os: ubuntu-latest
             compiler-pkg: g++-11
             env:
@@ -25,6 +30,16 @@ jobs:
             env:
               CC: gcc-8
               CXX: g++-8
+          - os: ubuntu-22.04
+            compiler-pkg: clang-14
+            env:
+              CC: clang-14
+              CXX: clang++-14
+          - os: ubuntu-22.04
+            compiler-pkg: clang-13
+            env:
+              CC: clang-13
+              CXX: clang++-13
           - os: ubuntu-latest
             compiler-pkg: clang-12
             env:
