Remove dylibbundler sources, since it is available with brew

--- a/configure.ac
+++ b/configure.ac
@@ -718,6 +718,7 @@ pkgdatadir="\$(datadir)/$PACKAGE"
 
 ENABLE_EXPLICIT([app-bundle], [creation of a MacOSX application bundle],
 [
+  AC_CHECK_PROG([have_dylibbundler], [dylibbundler], [yes], [no])
   AS_IF([test x$enable_app_bundle = xyes -o x$enable_app_bundle = x],
     [DMG_NAME=SoundScapeRenderer-$PACKAGE_VERSION.dmg],
     [DMG_NAME=$enable_app_bundle])
@@ -847,6 +848,12 @@ AS_IF([test x$have_manpages != xyes],
   echo "|"
   echo "|>  WARNING: help2man was not found!"
   echo "|>  Disabling building of manpages"
+])
+AS_IF([test x$have_app_bundle = xyes -a x$have_dylibbundler != xyes],
+[
+  echo "|"
+  echo "|>  WARNING: dylibbundler was not found!"
+  echo "|>  It is needed for creating the app bundle."
 ])
 
 echo "|"
