--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,8 +2,12 @@
 
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3"
+
 python:
-  version: 3
   install:
     - requirements: doc/manual/requirements.txt
   system_packages: true
