--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "extern/include/asio"]
 	path = extern/include/asio
 	url = https://github.com/chriskohlhoff/asio.git
+[submodule "extern/include/jack"]
+	path = extern/include/jack
+	url = https://github.com/jackaudio/headers.git
