Enable Websocket interface

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "extern/include/jack"]
 	path = extern/include/jack
 	url = https://github.com/jackaudio/headers.git
+[submodule "extern/include/websocketpp"]
+	path = extern/include/websocketpp
+	url = https://github.com/zaphoyd/websocketpp.git
